# rt

./: .editorconfig  AGENTS.md  Cargo.toml  README.md  input.json  input.scene.rt  multiple-csg.rt
assets/: i1.scene.rt  i2.scene.rt  i3.scene.rt  multiple-csg.scene.rt  roman-surface.scene.rt
bmp/: Cargo.toml
bmp/src/: lib.rs
core/: Cargo.toml
core/src/: lib.rs
core/src/types/: rt.rs
json/src/: lib.rs
json_minifier_cli/: Cargo.toml
json_minifier_cli/src/: main.rs
jsonc/: Cargo.toml  build.rs  init.sh
jsonc/include/: jsonc.h
jsonc/native/: jsonc.c
jsonc/src/: bindings.rs  lib.rs
pack/src/: lib.rs
pack_cli/: Cargo.toml
pack_cli/src/: main.rs
rt/: Cargo.toml
rt/src/: main.rs
scene/: Cargo.toml
scene/src/: lib.rs
scene/src/camera/: mod.rs  perspective.rs
scene/src/light/: directional.rs  mod.rs  point.rs  spot.rs
scene/src/object/: csg.rs  cube.rs  mod.rs  plane.rs  quadratic.rs  quadric.rs  quartic.rs  sphere.rs  util.rs
scene/src/texture/: mod.rs  plain.rs
schema/: base-types.schema.json  csg-model.schema.json  map.schema.json  object.schema.json  scene.schema.json
src/: bmp.rs  main.rs
types/src/: lib.rs
